[gd_scene load_steps=2 format=3 uid="uid://bx9k4j2m8n7p1"]

[ext_resource type="Script" path="res://scenes/ui/QuickHUD.gd" id="1_quick_hud"]

[node name="QuickHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("1_quick_hud")

[node name="HUDContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 50.0
add_theme_constant_override("separation", 20)

[node name="CoinContainer" type="HBoxContainer" parent="HUDContainer"]
layout_mode = 2
add_theme_constant_override("separation", 5)

[node name="CoinIcon" type="ColorRect" parent="HUDContainer/CoinContainer"]
layout_mode = 2
custom_minimum_size = Vector2(30, 30)
color = Color(1, 0.843, 0, 1)

[node name="CoinLabel" type="Label" parent="HUDContainer/CoinContainer"]
layout_mode = 2
text = "0"
vertical_alignment = 1

[node name="KeyContainer" type="HBoxContainer" parent="HUDContainer"]
layout_mode = 2
add_theme_constant_override("separation", 5)

[node name="KeyIcon" type="ColorRect" parent="HUDContainer/KeyContainer"]
layout_mode = 2
custom_minimum_size = Vector2(30, 30)
color = Color(0.753, 0.753, 0.753, 1)

[node name="KeyLabel" type="Label" parent="HUDContainer/KeyContainer"]
layout_mode = 2
text = "0"
vertical_alignment = 1

[node name="PotionContainer" type="HBoxContainer" parent="HUDContainer"]
layout_mode = 2
add_theme_constant_override("separation", 5)

[node name="PotionIcon" type="ColorRect" parent="HUDContainer/PotionContainer"]
layout_mode = 2
custom_minimum_size = Vector2(30, 30)
color = Color(1, 0, 0, 1)

[node name="PotionLabel" type="Label" parent="HUDContainer/PotionContainer"]
layout_mode = 2
text = "0"
vertical_alignment = 1

[node name="NotificationContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -220.0
offset_top = -300.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0 